[package]
name = "chap01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "answer_a01"
path = "src/answer_a01.rs"

[[bin]]
name = "answer_a02"
path = "src/answer_a02.rs"

[[bin]]
name = "answer_a03"
path = "src/answer_a03.rs"

[[bin]]
name = "answer_a04"
path = "src/answer_a04.rs"

[[bin]]
name = "answer_a05"
path = "src/answer_a05.rs"